--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "ts-node-esm server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +16,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17"
+  },
+  "compilerOptions": {
+    "esModuleInterop": true
   }
 }
